# email-server

./: Cargo.toml  README.md
src/: database.rs  main.rs
