[package]
name = "email-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
libsql-client = "0.33.2"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
url = "2.5.0"

